--- a/MIIDMApp-master/style/navbar.css
+++ b/MIIDMApp-master/style/navbar.css
@@ -113,3 +113,20 @@ nav#navbar_topNav {
     background-color: black;
     transition: all 0.5s ease;
 }
+
+@media screen and (orientation: landscape) {
+
+  #navbar_titoloTopNav {
+    font-size: 1.7rem;
+    margin: 0;
+    padding-left: 23vw;
+    color: #34495e;
+    letter-spacing: 0.8vw;
+  }
+
+  #navbar_divTitoloTopNav {
+    display: flex;
+    align-items: center;
+    margin-top: 1vh;
+  }
+}
