--- a/MIIDMApp-master/style/navbar.css
+++ b/MIIDMApp-master/style/navbar.css
@@ -132,45 +132,66 @@ nav#navbar_topNav {
 
   #navbar_mySidenav {
     background-color: #f1c40e;
-    transition: all 0.5s ease;
+    transition: all 0.7s ease;
     width: 100vw;
-    height: 50vh;
+    height: 60vh;
     position: fixed;
     top: -100vh;
     left: 0vw;
-    z-index: 101;
+    z-index: 3;
   }
 
   .navbar_divSelezioniSidenav {
     display: grid;
-    grid-template-columns: 20vw 45vw;
+    grid-template-columns: 9vw 30vw;
     width: 65vw;
-    height: 7vh;
+    height: 8vh;
+    padding-left: 38.5vw;
   }
   
   .navbar_divIconeSelezioniSidenav {
-    width: 20vw;
+    width: 9vw;
+    height: 8vh;
     align-items: center;
     display: flex;
     justify-content: center;
   }
   
   .navbar_iconeSelezioniSidenav {
-    width: 4vh;
+    width: 6vh;
     padding-left: 2vw;
+    cursor: pointer;
+    transition: width 0.5s ease;
   }
   
   .navbar_divLinkSelezioniSidebar {
     align-items: center;
     display: flex;
-    width: 45vw;
+    width: 30vw;
+    height: 9.25vh;
   }
   
   .navbar_linkSelezioniSidenav {
-    font-size: 5vw;
+    font-size: 3vw;
     color: #34495e;
+    cursor: pointer;
+    transition: font-size 0.5s ease;
   }
   
+  /*#esplora_sidebar:hover{
+    width: 6.5vh;
+    resize: both;
+  }*/
+
+  .navbar_iconeSelezioniSidenav:hover{
+    width: 6.5vh;
+  } 
+
+  .navbar_linkSelezioniSidenav:hover {
+    font-weight: bold;
+    font-size: 3.25vw;
+  }
+
   #divOscuramento {
       position: fixed;
       z-index: -4;
@@ -181,6 +202,6 @@ nav#navbar_topNav {
       height: 100vh;
       overflow: hidden;
       background-color: black;
-      transition: all 0.5s ease;
+      transition: all 0.2s ease;
   }
 }
