--- a/MIIDMApp-master/style/navbar.css
+++ b/MIIDMApp-master/style/navbar.css
@@ -144,9 +144,11 @@ nav#navbar_topNav {
   .navbar_divSelezioniSidenav {
     display: grid;
     grid-template-columns: 9vw 30vw;
-    width: 65vw;
+    width: 30vw;
     height: 8vh;
     padding-left: 38.5vw;
+    /*align-items: center;*/
+    
   }
   
   .navbar_divIconeSelezioniSidenav {
@@ -161,7 +163,6 @@ nav#navbar_topNav {
     width: 6vh;
     padding-left: 2vw;
     cursor: pointer;
-    transition: width 0.5s ease;
   }
   
   .navbar_divLinkSelezioniSidebar {
@@ -175,25 +176,11 @@ nav#navbar_topNav {
     font-size: 3vw;
     color: #34495e;
     cursor: pointer;
-    transition: font-size 0.5s ease;
   }
-  
-  /*#esplora_sidebar:hover{
-    width: 6.5vh;
-    resize: both;
-  }*/
-
-  /*.navbar_iconeSelezioniSidenav:hover{
-    width: 6.5vh;
-  } 
-
-  .navbar_linkSelezioniSidenav:hover {
-    font-weight: bold;
-    font-size: 3.25vw;
-  }*/
 
    /*Viene effettuata la modifica per gli elementi contenuti nel divSelezioniSidenav*/
   .navbar_divSelezioniSidenav:hover > * {
+    transition: transform 0.6s ease;
     transform: scale(1.05);
     font-weight: bold;
   }
