--- a/MIIDMApp-master/style/info.css
+++ b/MIIDMApp-master/style/info.css
@@ -126,6 +126,7 @@ article#Orari {
     box-sizing: border-box;
     grid-template-areas: ".  ."
                          ".  O";
+                         /*greve*/
 }
 article#Orari div {grid-area: O;}
 
