--- a/MIIDMApp-master/style/navbar.css
+++ b/MIIDMApp-master/style/navbar.css
@@ -35,6 +35,11 @@ nav#navbar_topNav {
 #navbar_logoTopNav {
   width: 9vh;
   cursor: pointer;
+  display: block;
+}
+
+#navbar_logoTopNavSearch {
+  display: none;
 }
 
 .navbar_divIconeTopNav {
@@ -132,6 +137,16 @@ nav#navbar_topNav {
     cursor: pointer;
   }
 
+  #navbar_logoTopNav {
+    display: none;
+  }
+  
+  #navbar_logoTopNavSearch {
+    width: 9vh;
+    cursor: pointer;
+    display: block;
+  }
+
   #navbar_mySidenav {
     background-color: #f1c40e;
     transition: all 0.7s ease;
@@ -199,4 +214,5 @@ nav#navbar_topNav {
       background-color: black;
       transition: all 0.2s ease;
   }
+
 }
