--- a/MIIDMApp-master/style/info.css
+++ b/MIIDMApp-master/style/info.css
@@ -144,6 +144,10 @@ article#Orari div {grid-area: O;}
     padding-top: 1rem;
   }
 
+  article#Contatti {grid-area: P;}
+  article#Trovaci {grid-area: T;}
+  article#Orari {grid-area: O;}
+
   div#info_container_sez {
     display: grid;
     width: 75vw;
@@ -154,21 +158,23 @@ article#Orari div {grid-area: O;}
     transform: rotate(0deg);
     grid-gap: 15px;
     height: 75vw;
+    grid-template-areas: 'T  P'
+                         'O  P';
   }
 
-  article.informazione {
+  /*article.informazione {
       background-color: #f1c40e;
       width: 100%;
       height: 100%;
       border: 0 !important;
       box-sizing: border-box;
-  }
+  }*/
 
   article h1 {
     font-size: 2rem;
   }
 
-  article h5 {
+  h5 {
     font-size: 1.5rem;
   }
 
@@ -179,15 +185,15 @@ article#Orari div {grid-area: O;}
     height: 60%;
   }
 
-  div#contattaci img{
-    width: 45%;
-    height: 45%;
+  div#contattaci img{    
+    width: 40%;
+    height: 35%;
     margin-left: 5%;
     margin-top: 20%;
-    float: left;
+    /*float: center;*/
   }
 
-  div#trovandoci {
+  div#trovandoci {    
     margin-left: 25%;
     background-color: transparent;
     width: 60%;
@@ -195,29 +201,29 @@ article#Orari div {grid-area: O;}
   }
 
   div#trovandoci img{
-    width: 45%;
+    width: 40%;
     height: 45%;
     margin-left: 22%;
     margin-top: 20%;
     float: left;
   }
 
-  div#loghi_social {
+  div#Crediti {
     margin-left: 0 auto;
     background-color: #f1c40e;
-    width: 210%;
+    width: 203%;
     height: 120%;
   }
 
-  div#loghi_social img{
+  /*div#loghi_social img{
     width: 10vw;
     height: 10vw;
     margin-left: 15%;
     margin-top: 4%;
     float: left;
-  }
+  }*/
 
-  article#Crediti {
+  /*article#Crediti {
       border-left: 2px solid #f1c40e;
       border-top: 2px solid #f1c40e;
       grid-template-columns: 15px auto;
@@ -227,43 +233,34 @@ article#Orari div {grid-area: O;}
       grid-template-areas: "C  ."
                            ".  .";
   }
-  article#Crediti div {grid-area: C;}
+  article#Crediti div {grid-area: C;}*/
 
-  article#Contatti {
-      border-right: 2px solid #f1c40e;
-      border-top: 2px solid #f1c40e;
-      grid-template-columns: auto 15px;
-      grid-template-rows: 15px auto;
-      border: 0 !important;
-      box-sizing: border-box;
-      grid-template-areas: ".  P"
-                           ".  .";
-  }
-  article#Contatti div {grid-area: P;}
+  article#Contatti {      
+    border-right: 2px solid #f1c40e;
+    border-top: 2px solid #f1c40e;
+    grid-template-columns: 15px;
+    grid-template-rows: auto;
+    border: 0 !important;
+    box-sizing: border-box;
+  }  
 
   article#Trovaci {
-      border-left: 2px solid #f1c40e;
-      border-bottom: 2px solid #f1c40e;
-      grid-template-columns: 15px auto;
-      grid-template-rows: auto 15px;
-      border: 0 !important;
-      box-sizing: border-box;
-      background-image: url("../res/background_info_maps.png");
-      background-size: cover;
-      grid-template-areas: ".  ."
-                           "T  .";
-  }
-  article#Trovaci div {grid-area: T;}
+    border-left: 2px solid #f1c40e;
+    border-bottom: 2px solid #f1c40e;
+    grid-template-columns: 15px auto;
+    grid-template-rows: auto 15px;
+    border: 0 !important;
+    box-sizing: border-box;
+    background-image: url("../res/background_info_maps.png");
+    background-size: cover;
+  }  
 
   article#Orari {
-      border-right: 2px solid #f1c40e;
-      border-bottom: 2px solid #f1c40e;
-      grid-template-columns: auto 15px;
-      grid-template-rows: auto 15px;
-      border: 0 !important;
-      box-sizing: border-box;
-      grid-template-areas: ".  ."
-                           ".  O";
-  }
-  article#Orari div {grid-area: O;}
+    border-right: 2px solid #f1c40e;
+    border-bottom: 2px solid #f1c40e;
+    grid-template-columns: auto 15px;
+    grid-template-rows: auto 15px;
+    border: 0 !important;
+    box-sizing: border-box;
+  }  
 }
