--- a/MIIDMApp-master/style/navbar.css
+++ b/MIIDMApp-master/style/navbar.css
@@ -35,10 +35,11 @@ nav#navbar_topNav {
 #navbar_logoTopNav {
   width: 9vh;
   cursor: pointer;
-  display: block;
+  position: absolute;
+  display:block;
 }
 
-#navbar_logoTopNavSearch {
+#navbar_buttonTopNavSearch {
   display: none;
 }
 
@@ -137,14 +138,37 @@ nav#navbar_topNav {
     cursor: pointer;
   }
 
-  #navbar_logoTopNav {
-    display: none;
-  }
-  
-  #navbar_logoTopNavSearch {
+ #navbar_logoTopNav {
     width: 9vh;
     cursor: pointer;
-    display: block;
+    display:none;
+  }
+
+  #navbar_buttonTopNavSearch {
+    /*padding: 0;
+    margin: 0;
+    background-color: transparent;
+    width: 7vw;
+    height: 7vh;
+    position: relative;*/
+    width: 7vw;
+    height: 7.40vh;
+    display:block;
+    position: relative;
+    margin: 0;
+    padding: 0;
+    background-color: transparent;
+    border: none;
+    outline: none;
+  }
+
+  #navbar_buttonTopNavSearch img {
+    display:block;
+    position: absolute;
+    top: calc(35% - 2.30vh);
+    left: calc(50% - 3.50vh);
+    width: 6vh;
+    transition: 0.6s;
   }
 
   #navbar_mySidenav {
