--- a/MIIDMApp-master/style/ricerca.css
+++ b/MIIDMApp-master/style/ricerca.css
@@ -22,16 +22,17 @@ input#keyword {
     color: #f1c40e;
     background-color: rgb(0,0,0,0.3);
     width: 100%;
-    padding-left: 2rem;
+    padding-left: 3.5rem;
     transition: all .25s ease;
     box-sizing: border-box;
     flex: 2; /*Deve essere il doppio del bottone*/
+    margin-top: 0;
     margin-right: 15px;
     margin-left: 0;
 
     /*Icona di ricerca*/
     background-image: url("../res/inputbar_searchIconGialla.png");
-    background-position: 7px;
+    background-position: 5px;
     background-repeat: no-repeat;
     background-size: contain;
 }
@@ -66,25 +67,26 @@ p.intestazione {
 
 div#container_sezioni {
     display: grid;
-    width: 66vw;
-    margin-top: 12vw;
-    margin-left: 17%;
+    width: 50vw;
+    margin-top: 3vw;
+    margin-left: 25%;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     grid-gap: 15px;
-    height: 66vw;
-    transform: rotate(45deg);
+    height: 50vh;
+    transform: rotate(0deg);
 }
 
 article.sezione {
     display: grid;
 }
+
 article.sezione > div {background-color: #f1c40e;}
 
 article.sezione div.immagine_testo_sezione {
     width: 100%;
     height: 100%;
-    transform: rotate(-45deg);
+    transform: rotate(0deg);
     background-color: transparent;
 
     display: flex;
@@ -92,6 +94,7 @@ article.sezione div.immagine_testo_sezione {
     justify-content: center;
     flex-direction: column;
 }
+
 
 article.sezione div.container_immagine {
     width: 40%;
