--- a/MIIDMApp-master/style/qrscanner.css
+++ b/MIIDMApp-master/style/qrscanner.css
@@ -78,6 +78,7 @@ canvas img{
   border: none;
   outline: none;
   z-index: 5;
+  display: none;
 }
 
 #imgPhoto{
@@ -103,4 +104,12 @@ canvas img{
   position: relative;
   width: 100%;
   top: 3vh;
+}
+
+@media screen and (orientation: landscape) {
+
+  #takePhotoButton {
+    display: none;
+  }
+
 }
