--- a/MIIDMApp-master/style/ricerca.css
+++ b/MIIDMApp-master/style/ricerca.css
@@ -235,7 +235,7 @@ p.intestazione {
 
 div#container_sezioni {
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     justify-content: center;
     width: 80vw;
     margin-top: 5vw;
@@ -251,8 +251,13 @@ article.sezione {
     display: grid;
     width: 15rem;
     height: 15rem;
+    transition: all 0.25s ease;
 }
 article.sezione > div {background-color: #f1c40e;}
+
+article.sezione:hover {
+    background-color: #f1c40e;
+}
 
 article.sezione div.immagine_testo_sezione {
     width: 100%;
