--- a/MIIDMApp-master/style/info.css
+++ b/MIIDMApp-master/style/info.css
@@ -134,11 +134,7 @@ article#Orari div {grid-area: O;}
   
   /*stile titolini article*/
   article h1 {
-    font-size: 2rem;
-  }
-
-  article h5 {
-    font-size: 1.2rem;;
+    font-size: 2.5rem;
   }
 
   p#didascaliaInfo {
@@ -156,8 +152,8 @@ article#Orari div {grid-area: O;}
     width: 75vw;
     margin-top: 2.5vw;
     margin-left: 13%;
-    grid-template-columns: 2fr 0.7fr auto;
-    grid-template-rows: 1.2fr 0.8fr 0.3fr;
+    grid-template-columns: 70% 30% auto;
+    grid-template-rows: 55% 32.5% 12.5%;
     transform: rotate(0deg);
     grid-gap: 15px;
     height: 75vw;
@@ -220,13 +216,14 @@ article#Orari div {grid-area: O;}
     background-color: #f1c40e;
     width: 60%;
     height: 60%;
+    gap: 40px;
   }
 
   div#contattaci img{
     width: 7.9vw;
     height: 7.9vw;
     margin-left: 5%;
-    margin-top: 30%;
+    margin-top: 11%;
     float: left;
   }
 
@@ -244,34 +241,33 @@ article#Orari div {grid-area: O;}
     grid-row: 2;
   }
 
+  div#orario{
+      display: flex;
+      margin-top: 8%;
+  }
+
   div#orario img{
-    width: 7.9vw;
-    height: 7.9vw;
-    margin-left: 10%;
-    margin-top: 7%;
-    float: left;
+    width: 10vw;
+    height: 10vw;
+    margin-left: 11%;
   }
 
   div#orario1 {
-    margin-left: 30%;
+    margin-left: 15%;
     background-color: transparent;
     width: 60%;
     height: 80%;
-    float: left;
   }
 
   div#orario2{
-    margin-left: 50%;
     background-color: transparent;
     width: 60%;
     height: 80%;
-    float: right;
   }
 
-  /*.p1{
-    font-size: 20px;
-    
-  }*/
+  article#Orari h5 {
+    font-size: 1.5rem;
+  }
 
   /*formattazione Crediti*/
 
@@ -285,6 +281,17 @@ article#Orari div {grid-area: O;}
     box-sizing: border-box;
     grid-column: 1 / 3;
     grid-row: 3;
+  }
+
+  article#Crediti h1 {
+    font-size: 2rem;
+    text-align: center;
+  }
+
+  article#Crediti h5 {
+    font-size: 1rem;
+    text-align: center;
+    /*margin-left: 6%;*/
   }
 
 }
