--- a/MIIDMApp-master/style/reperto.css
+++ b/MIIDMApp-master/style/reperto.css
@@ -130,193 +130,139 @@ footer#chiudi_pagina_reperto img {
 	width: 4vh;
 }
 
-/*
-@keyframes tonext {
-	75% {
-	  left: 0;
-	}
-	95% {
-	  left: 100%;
-	}
-	98% {
-	  left: 100%;
-	}
-	99% {
-	  left: 0;
-	}
-  }
-  
-  @keyframes tostart {
-	75% {
-	  left: 0;
-	}
-	95% {
-	  left: -300%;
-	}
-	98% {
-	  left: -300%;
-	}
-	99% {
-	  left: 0;
-	}
-  }
-  
-  @keyframes snap {
-	96% {
-	  scroll-snap-align: center;
-	}
-	97% {
-	  scroll-snap-align: none;
-	}
-	99% {
-	  scroll-snap-align: none;
-	}
-	100% {
-	  scroll-snap-align: center;
-	}
-  }
 
-  .carousel {
-	position: relative;
-	padding-top: 75%;
-	filter: drop-shadow(0 0 10px #0003);
-	perspective: 100px;
-  }
-  
-  .carousel__viewport {
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	display: flex;
-	overflow-x: scroll;
-	counter-reset: item;
-	scroll-behavior: smooth;
-	scroll-snap-type: x mandatory;
-  }
-  
-  .carousel__slide {
-	position: relative;
-	flex: 0 0 100%;
-	width: 100%;
-	background-color: #f99;
-	counter-increment: item;
-  }
-  
-  .carousel__slide:before {
-	content: counter(item);
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	transform: translate3d(-50%,-40%,70px);
-	color: #fff;
-	font-size: 2em;
-  }
-  
-  .carousel__snapper {
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	scroll-snap-align: center;
-  }
-  
-  @media (hover: hover) {
-	.carousel__snapper {
-	  animation-name: tonext, snap;
-	  animation-timing-function: ease;
-	  animation-duration: 4s;
-	  animation-iteration-count: infinite;
+@media screen and (orientation: landscape) {
+
+	#pagina_reperto_principale {
+		margin: 0;
+		background-color: #34495e;
+		box-sizing: border-box;
+		position: fixed;
+		top: 150vh;
+		transition: all 0.75s ease;
+		z-index: 500;
+		overflow-y: scroll;
+		height: 100vh;
+		width: 100vw;
 	}
-  
-	.carousel__slide:last-child .carousel__snapper {
-	  animation-name: tostart, snap;
+	
+	#rep_titolo {
+	  text-align: center;
+	  padding-bottom: 0.5rem;
+	  width: 100%;
+	  box-sizing: border-box;
+	  font-size: 2rem;
+	  color: #f1c40e;
+	  padding: 2rem;
+	  word-wrap: break-word;
 	}
-  }
-  
-  @media (prefers-reduced-motion: reduce) {
-	.carousel__snapper {
-	  animation-name: none;
+	
+	.rep_codice {
+		color: white;
+		font-size: 1rem;
+		text-align: right;
+		width: 100%;
+		box-sizing: border-box;
+		margin-top: 2vh;
+		padding-right: 5vw;
 	}
-  }
-  
-  .carousel:hover .carousel__snapper,
-  .carousel:focus-within .carousel__snapper {
-	animation-name: none;
-  }
-  
-  .carousel__navigation {
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	text-align: center;
-  }
-  
-  .carousel__navigation-list,
-  .carousel__navigation-item {
-	display: inline-block;
-  }
-  
-  .carousel__navigation-button {
-	display: inline-block;
-	width: 1.5rem;
-	height: 1.5rem;
-	background-color: #333;
-	background-clip: content-box;
-	border: 0.25rem solid transparent;
-	border-radius: 50%;
-	font-size: 0;
-	transition: transform 0.1s;
-  }
-  
-  .carousel::before,
-  .carousel::after,
-  .carousel__prev,
-  .carousel__next {
-	position: absolute;
-	top: 0;
-	margin-top: 37.5%;
-	width: 4rem;
-	height: 4rem;
-	transform: translateY(-50%);
-	border-radius: 50%;
-	font-size: 0;
-	outline: 0;
-  }
-  
-  .carousel::before,
-  .carousel__prev {
-	left: -1rem;
-  }
-  
-  .carousel::after,
-  .carousel__next {
-	right: -1rem;
-  }
-  
-  .carousel::before,
-  .carousel::after {
-	content: '';
-	z-index: 1;
-	background-color: #333;
-	background-size: 1.5rem 1.5rem;
-	background-repeat: no-repeat;
-	background-position: center center;
-	color: #fff;
-	font-size: 2.5rem;
-	line-height: 4rem;
-	text-align: center;
-	pointer-events: none;
-  }
-  
-  .carousel::before {
-	background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='0,50 80,100 80,0' fill='%23fff'/%3E%3C/svg%3E");
-  }
-  
-  .carousel::after {
-	background-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpolygon points='100,50 20,100 20,0' fill='%23fff'/%3E%3C/svg%3E");
-  }
-  */
+	
+	#rep_codice {margin-top: 0.5vh;}
+	
+	.rep_descrizioneTitle {
+		color: #f1c40e;
+		font-size: 1.3rem;
+		padding: 2vh 0 0 5vw;
+	}
+	
+	.rep_descrizione {color: white; padding: 1vh 5vw 2vh 5vw;}
+	
+	#rep_dimensioni {
+		text-align: center;
+		display: grid;
+		grid-template-columns: auto auto auto auto;
+		grid-gap: 5%;
+		grid-row-gap: 15%;
+		grid-template-rows: 4rem;
+		color: white;
+		margin: 5% 5% 5% 5%;
+	}
+	
+	#rep_dimensioni img[src*="svg"] {
+		height: 1.5rem;
+	}
+	
+	#rep_dimensioni p.indicazione {
+	  text-align: center;
+		margin-bottom: 0.7em;
+		font-size: 0.7rem;
+	}
+	
+	#rep_dimensioni p.valoreMisura {
+		text-align: center;
+		margin-top: 0.5em;
+		font-size: 1rem;
+	}
+	
+	i.fas {text-align: center;}
+	
+	.rep_separe {color: #f1c40e; border-bottom: 4px double white;}
+	
+	.rep_mySlides {display:none; margin-top: 3vh;}
+	
+	button.rep_freccia {
+		width: 15%;
+		height: 5vh;
+		font-size: 2rem;
+		background-color: #34495e;
+		color: #f1c40e;
+		border: none;
+	}
+	
+	button#rep_but_left {float: left;}
+	
+	button#rep_but_right {float: right;/*transform: rotate(180deg);*/}
+	
+	button.rep_freccia > img {
+		width: 100%;
+		max-width: 40px;
+	}
+	
+	#container_immagini {display: none;}
+	#show_immagini {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		margin-bottom: 10vh;
+	}
+	
+	#immagine_grande {
+		width: 100vw;
+		max-width: 100vw;
+		position: fixed;
+		top: calc((100vh - 90vw) / 2);
+		left: 5vw;
+		transform: scale(0);
+		transition: all 0.5s ease;
+		z-index: 600s;
+	}
+	
+	footer#chiudi_pagina_reperto {
+		height: 6vh;
+		position: fixed;
+		bottom: 0;
+		z-index: 500;
+		align-items: center;
+		display: flex;
+		justify-content: center;
+		background-color: #f1c40e;
+		width: 100%;
+		left: 150vw;
+		transition: all 0.75s ease;
+	}
+	
+	footer#chiudi_pagina_reperto img {
+		width: 4vh;
+	}
+	
+}
